fix some layout bugs

--- a/css/custom.css
+++ b/css/custom.css
@@ -255,9 +255,9 @@ section.masthead {
     border: solid 2px #2c3e50;
     background: transparent; }
     .btn-outline.active, .btn-outline:active, .btn-outline:focus, .btn-outline:hover {
-      color: #FFFFFF;
+      color: #2c3e50;
       border: solid 2px #2c3e50;
-      background:#2c3e50; }
+      background:#FFFFFF; }
 
 .footer-bg {
     position: fixed;
@@ -266,7 +266,7 @@ section.masthead {
     z-index: 99;
 }
 
-.btn-social {
+.footer-btn-social {
     font-size: 16px;
     line-height: 30px;
     display: inline-block;
